<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_fragment_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        android:contentDescription="@string/go_back_to_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_chevron_left" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="671dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/label_max_calories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_calories_per_day"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/number_max_calories"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_box"
                    android:gravity="center_horizontal"
                    android:hint="@string/max_search_results_input"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="#616161"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_card"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/label_max_search_results"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_search_results"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/number_max_search_results"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_box"
                    android:gravity="center_horizontal"
                    android:hint="@string/max_search_results_input"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="#616161" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/settings_card"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/label_diet_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diet_type"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_diet_type"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/diet_type"
                    android:textAlignment="textEnd"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/settings_card"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/label_meal_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meal_type"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_meal_type"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/meal_type"
                    android:textAlignment="textEnd"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/settings_card"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/random_feed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/random_Feed"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/random_feed_input"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/random_Feed"
                    android:textAlignment="textEnd"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>