<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_calorie_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_calorie_status"
                    android:textColor="@color/text_2"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/calorie_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progress="6"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/calorie_progress_bar_max"
                    />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:background="#00000000"
                android:contentDescription="@string/go_to_settings"
                app:srcCompat="@drawable/ic_settings" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_search_text"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/search_input"
                android:hint="@string/search"
                android:inputType="text"
                android:textColorHint="#616161"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="51dp"
                android:layout_marginBottom="-2dp"
                android:background="@drawable/search_button"
                android:insetTop="2dp"
                android:insetBottom="0dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/search"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_main_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_search_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>